KNOX-1474 - Bump apacheds dependency version to 2.0.0-AM24
Signed-off-by: Kevin Risden <krisden@apache.org>